css/section.css
/* 
    Filename: section.css
    Purpose: holds style rules for the home and section pages of the design system website.
    Author: Montana Pistell
    Last Modified: March 6, 2023
*/

/* ---------- Home ---------- */

/* Hero Section */
.hero {
    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)), url("../images/houseplants-row.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-items: center;
}
.hero h1 {
    width: 100%;
    color: var(--cream);
    text-align: left;
    margin-top: 25px;
    padding: 25px;
}
.introduction {
    font-size: 1.2rem;
    padding: 25px;
    width: 80%;
    margin-bottom: 25px;
    color: var(--cream);
}

/* Section Cards */
.section-list {
    width: 100%;
}
.section-list-item {
    display: flex;
    margin: 1.5em;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    border-radius: 5px;
}
.section-list-item img {
    width: 30%;
    height: 250px;
    object-fit: cover;
    border-radius: 5px 0 0 5px;
    overflow: hidden;
}
.details {
    width: 70%;
    display: flex;
    padding: 1em;
    flex-direction: column;
}
.details > h2 {
    margin-bottom: 25px;
}
.button {
    margin-top: 25px;
    width: fit-content;
    padding: 10px 25px;
    background-color: var(--leaf-green);
    border-radius: 5px;
    color: var(--cream);
    transition: all 0.3s ease-in-out;
}
.button:hover {
    background-color: var(--charcoal);
    text-decoration: none;
    color: var(--cream);
}

/* Banner */
.banner {
    background-color: var(--light-blue);
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    height: fit-content;
}
.banner h3 {
    padding: 25px;
}
.banner a {
    padding: 10px 25px;
    width: fit-content;
    border: 2px solid var(--charcoal);
    border-radius: 5px;
    transition: all 0.3s ease-in-out;
    margin-bottom: 1em;
}
.banner a:hover {
    text-decoration: none;
    background-color: var(--charcoal);
    color: var(--cream);
}

/* ---------- Section Pages ---------- */

/* Breadcrumbs */
.breadcrumbs {
    width: 100%;
    background-color: white;
    box-shadow: 0px 6px 20px -10px rgba(0,0,0,0.2);
    padding: 15px 25px;
    color: var(--charcoal);
    position: fixed;
}
.breadcrumbs li {
    display: inline;
}
.breadcrumbs a {
    color: var(--leaf-green);
}

/* Page Title and Description */
h1 {
    margin-top: 75px;
    margin-bottom: 10px;
}
h1, .section-description {
    padding-left: 25px;
    padding-bottom: 10px;
    width: 80%;
    color: var(--charcoal);
}

/* Subsection Cards */
.subsection-list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 25px;
    color: var(--charcoal);
}
.subsection-list-item {
    margin-bottom: 50px; 
    width: 50%;
}
.subsection-list-item h4 {
    background-color: var(--ash-grey);
    padding: 10px;
}
.subsection-list-item p {
    padding: 10px 0;
    width: 80%;
}
.subsection-list-item a {
    display: block;
    width: fit-content;
    padding: 10px;
    border: 2px solid var(--leaf-green);
    border-radius: 5px;
    transition: all 0.3s ease-in-out;
}
.subsection-list-item a:hover {
    background-color: var(--leaf-green);
    color: var(--cream);
    text-decoration: none;
}

@media only screen and (max-width: 768px) {
    .subsection-list-item {
        width: 100%;
    }
}

